# leptos-2048

./: 128.json  Cargo.toml  index.html
.github/workflows/: main.yml
assets/: style.scss
src/: alg.rs  game.rs  lib.rs  main.rs  mcts.rs  render.rs
src/nn/: activation.rs  layer.rs  mod.rs  node.rs
src/population/: agent.rs  mod.rs
src/ui/: board.rs  controls.rs  mod.rs
