[package]
name = "leptos-2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.12", features = ["csr", "nightly"] }
leptos_hotkeys = "0.2.1"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
strum = "0.26.3"
strum_macros = "0.26.4"
