[package]
name = "leptos-2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
itertools = "0.13.0"
leptos = { version = "0.6.12", features = ["csr", "nightly"] }
leptos-use = "0.10.10"
leptos_hotkeys = "0.2.1"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
strum = "0.26.3"
strum_macros = "0.26.4"
